# real_time_note_taker

./: Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml  release.yml
src/: app.rs  key_utils.rs  lib.rs  main.rs  mod1.rs  mod2.rs  theme.rs  ui.rs
tests/: cli.rs  cli_invalid.rs
