[package]
name = "real_time_note_taker"
version = "1.0.0"
edition = "2021"
authors = ["Andrew Sims, andrew.sims@dataforgesolutions.com"]
description = "A terminal UI tool to take time stamped notes in real time."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Data-Forge-Solutions/real_time_note_taker"
homepage = "https://github.com/Data-Forge-Solutions/real_time_note_taker"
readme = "README.md"
keywords = ["tui", "ratatui", "note-taking", "real-time", "productivity"]
categories = ["command-line-utilities", "text-processing", "date-and-time"]
default-run = "rtnt"

[dependencies]
ratatui = "0.29"
crossterm = "0.29.0"
serde = { version = "1", features = ["derive"] }
csv = "1"
thiserror = "2.0.12"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"

[[bin]]
name = "rtnt"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
